💄 Fixing z-index style

--- a/front/src/styles/Awards.module.sass
+++ b/front/src/styles/Awards.module.sass
@@ -4,6 +4,7 @@
 .card
   padding: 16px
   border: 1px solid var(--yellow)
+  background-color: var(--white)
   width: 100%
   box-sizing: border-box
   display: block
